attempt 7: fix white spacing on iOS

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,5 @@
 html, body {
   padding: 0;
-  padding-top: env(safe-area-inset-top, 20px);
-  padding-bottom: env(safe-area-inset-bottom, 20px);
-  padding-left: env(safe-area-inset-left, 20px);
-  padding-right: env(safe-area-inset-right, 20px);
   margin: 0;
   width: 100vw;
   height: 100vh;
@@ -12,6 +8,14 @@ html, body {
   overflow: hidden;
   color: #fff;
   background: linear-gradient(#123, #111);
+  padding-top: constant(safe-area-inset-top);
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-left: constant(safe-area-inset-left);
+  padding-right: constant(safe-area-inset-right);
+  padding-top: env(safe-area-inset-top);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-left: env(safe-area-inset-left);
+  padding-right: env(safe-area-inset-right);
 }
 
 @media (orientation: landscape) {
